Configure viewEmail operation for profile.